# Social-Media-Downloader

./: .gitignore  CLAUDE.md  ISSUES_AND_SUGGESTIONS.md  LICENSE  config.json  download_history.csv  install.sh  pyproject.toml  pyproject.toml.backup  quick_install.sh  requirements.txt  setup.py
smd/: __init__.py  downloader.py
social_media_downloader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
