[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "social-media-downloader"
version = "1.1.12"
description = "A CLI tool for downloading videos from social media platforms"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2024.1.0",
    "instaloader>=4.11.0",
    "tqdm>=4.66.0",
    "requests>=2.32.0",
    "ffmpeg-python>=0.2.0",
    "certifi>=2024.2.0",
    "setuptools>=69.0.0",
    "wheel>=0.42.0",
    "pyfiglet>=1.0.0",
    "termcolor>=2.4.0",
    "tabulate>=0.9.0",
    "cryptography>=41.0.0",
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
]

[project.scripts]
smd = "smd.downloader:cli"
social-media-downloader = "smd.downloader:cli"

[tool.setuptools]
packages = ["smd"]